# SECON26

./: .gitignore  .gitmodules  LICENSE
flight-team/tools/tcp-connection-debug/: .gitignore  main.py  test_server.py
flight-team/uav/: sdkconfig  sdkconfig.old
flight-team/uav/main/: CMakeLists.txt  uav.c
flight-team/uav/main/Camera/: camera.c
flight-team/uav/main/Flight_Controller/: flight_controller.c  flight_controller.h
flight-team/uav/main/Game_Controller/: game_controller.c  game_controller.h
flight-team/uav/main/server/: commands.c  commands.h  server.c
ground-team/communication/uav/: test_client.py
ground-team/motor-controls/: README.md  motor.py
ground-team/motor-controls/include/: motor-controller.h
ground-team/motor-controls/src/: motor-controller.c
ground-team/tasks/keypad-task/src/: main.py
ground-team/tasks/pressure-plate/: README.md
ground-team/tasks/pressure-plate/src/: main.c
